# sistema_de_rifa

./: Dockerfile  Jenkinsfile  README.md  database1.db  docker-compose.yml  pyproject.toml
backend/: Dockerfile  controller.py  database.db  database.py  database1.db  main.py  models.py  router.py  schema.py  test_main.py
frontend/: app.py
jenkins/: Dockerfile  Jenkinsfile  requirements.txt
