[tool.poetry]
name = "sistema-de-rifa"
version = "0.1.2"
description = ""
authors = ["Calel95 <borgescalel@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
sqlalchemy = "^2.0.36"
fastapi = {extras = ["standard"], version = "^0.115.4"}
psycopg2-binary = "^2.9.10"
httpx = "^0.27.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
